# PDF2EPUB-AI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PDF2EPUB-AI.cmd  README.md  SECURITY.md  pdf2epub-ai.spec  pdf2epub-ai.toml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  ci.yml
benchmarks/: repair_benchmark.py
docs/: AI_SETUP_TR.md  INSTALLATION_TR.md  TROUBLESHOOTING_TR.md  USER_GUIDE_TR.md
models/: Modelfile
samples/: create_sample_pdf.py
scripts/: build_windows.ps1  install_windows.ps1  run_gui.ps1
src/pdf2epub_ai/: __init__.py  cli.py  exceptions.py
src/pdf2epub_ai/ai/: __init__.py  providers.py  repair_engine.py
src/pdf2epub_ai/core/: config.py  models.py  pipeline.py  state.py
src/pdf2epub_ai/epub/: __init__.py  builder.py
src/pdf2epub_ai/ocr/: __init__.py  engines.py  pdf_analysis.py  preprocess.py
src/pdf2epub_ai/repair/: __init__.py  rules.py
src/pdf2epub_ai/ui/: app.py
src/pdf2epub_ai/utils/: files.py  logging.py
tests/: test_ai_provider.py  test_epub_builder.py  test_pipeline.py  test_repair_rules.py  test_state.py
