[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2epub-ai"
version = "0.2.0"
description = "Professional scanned PDF to EPUB 3 converter with AI-assisted OCR repair."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "PDF2EPUB AI" }]
license = { text = "MIT" }
keywords = ["epub", "ocr", "pdf", "turkish", "ollama"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "click>=8.1",
  "pydantic>=2.7",
  "tqdm>=4.66",
  "Pillow>=10.3",
  "lxml>=5.2",
  "wordfreq>=3.1",
]

[project.optional-dependencies]
ocr = [
  "pymupdf>=1.24",
  "pytesseract>=0.3.13",
  "opencv-python>=4.10",
  "numpy>=1.26",
]
gui = ["PySide6>=6.7"]
package = ["PyInstaller>=6.10"]
paddle = ["paddleocr>=2.7"]
easyocr = ["easyocr>=1.7"]
dev = [
  "black>=24.4",
  "ruff>=0.5",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "reportlab>=4.2",
]

[project.scripts]
pdf2epub-ai = "pdf2epub_ai.cli:main"

[project.gui-scripts]
pdf2epub-ai-gui = "pdf2epub_ai.ui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true
packages = ["pdf2epub_ai"]

[[tool.mypy.overrides]]
module = [
  "pdf2epub_ai.ocr.engines",
  "pdf2epub_ai.ui.app",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
